# PaintEasy

./: .gitignore  CMakeLists.txt  README.md
src/: ExitDialog.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  PaintArea.cpp  PaintArea.h  meta.rc  resources.qrc
src/Qt_build_components/include/QtCore/: qconfig.h
src/Qt_build_components/include/QtCore/6.8.1/QtCore/private/: qconfig_p.h  qtcore-config_p.h
src/Qt_build_components/lib/cmake/Qt6/: Qt6Config.cmake  Qt6ConfigExtras.cmake  Qt6Targets.cmake  qt.toolchain.cmake
src/Qt_build_components/lib/cmake/Qt6Core/: Qt6CoreAdditionalTargetInfo.cmake  Qt6CoreDependencies.cmake  Qt6CoreTargets.cmake
src/Qt_build_components/lib/cmake/Qt6Widgets/: Qt6QModernWindowsStylePluginAdditionalTargetInfo.cmake  Qt6QModernWindowsStylePluginConfig.cmake  Qt6QModernWindowsStylePluginConfigVersionImpl.cmake  Qt6QModernWindowsStylePluginDependencies.cmake  Qt6QModernWindowsStylePluginTargets.cmake  Qt6WidgetsAdditionalTargetInfo.cmake  Qt6WidgetsDependencies.cmake  Qt6WidgetsTargets.cmake
